(feat) añadida funcionalidad para resolver una incidencia en el service